@@ -122,7 +122,7 @@ module ActiveScaffold::Actions
     end
     
     def create_authorized?
-      (!nested? || !nested.readonly? || !nested.through?) && authorized_for?(:crud_type => :create)
+      !(nested? && (nested.readonly? || nested.readonly_through_association?)) && authorized_for?(:crud_type => :create)
     end
     private
     def create_authorized_filter
